fix(dialog): button spacing matches spec
Closes https://github.com/angular/material/issues/2671

--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -77,15 +77,13 @@ md-dialog {
     justify-content: flex-end;
     margin-bottom: 0;
     padding-right: $baseline-grid;
-    padding-left: $baseline-grid * 3;
+    padding-left: $baseline-grid * 2;
     min-height: $baseline-grid * 6.5;
 
-    > * {
-      margin-left: $baseline-grid / 2;
-      margin-right: 0;
-    }
     .md-button {
       margin-bottom: $baseline-grid;
+      margin-left: $baseline-grid;
+      margin-right: 0;
       margin-top: $baseline-grid;
     }
   }
